--- a/figuras.html
+++ b/figuras.html
@@ -5,13 +5,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Figuras geomatricas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Figuras geometricas</h1>
+
+    <header>
+        <h1>Figuras geometricas</h1>
+        <p>Este es el taller 1</p>
+    </header>
+
+    <section>
+        <h2>Calcula el area y perimetro de un cuadrado</h2>
+
+        <form>
+            <label for="inputCuadrado">
+                Por favor ingresa el lado del cuadrado:
+            </label>
+
+            <input type="number" id="inputCuadrado">
+
+            <button class="btn btn-secondary" type="button" onclick="calcularPerimetroCuadrado()">Calcular el perimetro</button>
+            
+            <button class="btn btn-secondary" type="button" onclick="calcularAreaCuadrado()">Calcular el Area</button>
+
+        </form>
+
+    </section>
+
+    <section>
+        <h2>Calcular la altura de un triangulo isoseles</h2>
+
+        <form>
+            <label for="hipotenusa">
+                Por favor ingresar la Hipotenusa
+            </label>
+
+            <input type="number" id="hipotenusa">
+
+            <label for="base">
+                Por favor ingresar la base
+            </label>
+
+            <input type="number" id="base">
+
+            <button class="btn btn-secondary" type="button" onclick="alturaTrianguloIsoseles()">Calcular</button>
+
+        </form>
+
+    </section>
 
 
 
 
     <script src="./figuras.js"></script>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
 </html>
